create websocket connection to a server

--- a/rosbridge_suite/package.xml
+++ b/rosbridge_suite/package.xml
@@ -28,6 +28,7 @@
 
   <exec_depend>rosbridge_library</exec_depend>
   <exec_depend>rosbridge_server</exec_depend>
+  <exec_depend>rosbridge_client</exec_depend>
   <exec_depend>rosapi</exec_depend>
 
   <export>
